Replacing Native JavaScript
This begins the process of replacing the native JavaScript used for
managing initialising of the DOM environment.

In addition, have updated the workflow so that deploy only occurrs from
master branch.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <script type="text/javascript" src="js/js.js"></script>
     <script type="text/javascript" src="js/dom.js"></script>     
     <script type="text/javascript" src="js/conway.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>    
     <style>
       body { background: #DDDDDD; }
       h1 { font-family: monospace; }
@@ -29,7 +28,7 @@
       var canvas = document.getElementById("mycanvas");
       var button = document.getElementById("startstop");
       var slider = document.getElementById("range");
-      run(canvas,button,slider);
+	conway$main$main(document,canvas);
     }    
 </script>
 </body>
